KIN-1307 fixes  tab heading color and flag spacing

--- a/src/screens/chart-notes/client-medical-record-details/ClientMedicalRecordDetailsComponent.scss
+++ b/src/screens/chart-notes/client-medical-record-details/ClientMedicalRecordDetailsComponent.scss
@@ -5,4 +5,7 @@
     justify-content: flex-end;
     margin-bottom: 24px;
   }
+  .tab-heading{
+    color: #07213C;
+  }
 }
